# resume_parser

./: .gitignore  README.md  app.py  data.json  pyproject.toml  requirements.txt
job data/: job.json
src/: exception.py  logger.py  utils.py
src/extraction_pipeline/: data_extraction.py
src/input_pipeline/: jd_input.py  user_input.py  user_resume_input.py
src/llm_pipeline/: data_validation_normalization.py  llm_semantic_parsing.py  normalization_validation.py
src/semantic_scoring/: candidate_score.py
templates/: admin.html  apply.html
