[project]
name = "resume-parser"
version = "0.1.0"
description = "This AI resume parser, parsers and shorlists the candidates based on their profile"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2python>=3.5.0",
    "groq>=1.0.0",
    "pdfplumber>=0.11.8",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
]
