[project]
name = "resume-parser"
version = "0.1.0"
description = "This AI resume parser, parsers and shorlists the candidates based on their profile"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2python>=3.5.0",
    "dotenv>=0.9.9",
    "groq>=1.0.0",
    "pdfplumber>=0.11.8",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "setuptools>=80.10.1",
    "spacy>=3.8.11",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "uv>=0.9.26",
    "wheel>=0.46.2",
    "datefinder>=0.7.3",
]
